# neuro_os

./: .gitignore  CMakeLists.txt  main.cpp
include/: neuro_os.h
scripts/: ex_c.json  requirements.txt  rr_notebook.ipynb  rr_valid.ipynb  rr_validator.py  scheduler_data.json  scheduler_data_gen.py  setup.py  test_data_gen.ipynb  test_stats.json
scripts/VirtualProcess/: NengoHelper.py  NengoQueue.py  ProcStates.py  VirtualProcess.py  VirtualQueue.py  __init__.py
scripts/nengo_os/: BaseNosInterface.py  ConventScheduler.py  FCFS_Nengo.py  InputSpikeHandler.py  NonNengoNemoInterface.py  RoundRobin.py  __init__.py  fcfs_full.py  logic_gates.py  neuro_os_interface.py  print_control.py  rr_full.py
scripts/neuro_os.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/results/: run_result_template.sqlite
scripts/tests/: test_nengo_process.py  test_pyproc.py  test_rr_full.py  test_virtual_queue.py
src/: NemoNosScheduler.cpp  NemoNosScheduler.h  NemoSchedulerInterface.cpp  NemoSchedulerInterface.h  NengoInterface.cpp  NengoInterface.h  SimProcess.cpp  SimProcess.h  process_states.h
